Generate first results

--- a/001_first_attempt.ipynb
+++ b/001_first_attempt.ipynb
@@ -9,20 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<_io.BufferedRandom name='audio.wav'>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pydub import AudioSegment\n",
     "\n",
@@ -39,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +44,8 @@
     "import soundfile as sf\n",
     "import torch\n",
     "import os\n",
+    "\n",
+    "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "# load model and tokenizer\n",
     "processor = Wav2Vec2ProcessorWithLM.from_pretrained(\n",
@@ -65,8 +56,9 @@
     "speech, sample_rate = sf.read(\"audio.wav\")\n",
     "\n",
     "# Limit the input to first N seconds:\n",
-    "input_values = processor(speech[0:60*sample_rate], sampling_rate=sample_rate, return_tensors=\"pt\").input_values.cuda()\n",
-    "inputs = processor(speech, sampling_rate=sample_rate, return_tensors=\"pt\")\n",
+    "speech_segment = speech[0:20*sample_rate]\n",
+    "\n",
+    "inputs = processor(speech_segment, sampling_rate=sample_rate, return_tensors=\"pt\")\n",
     "with torch.no_grad():\n",
     "    logits = model(**inputs).logits\n",
     "transcription = processor.batch_decode(logits.numpy()).text[0]"
@@ -74,42 +66,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "404.424771136"
+       "(25437888,)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "404424771136/10**9\n"
+    "speech.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16000"
+       "'ukoliko ste gledali vesti televizije b92 koje su upravo završene svakako vam je pretpostavljam poznato da je u ovim trenucima u toku sjednica vlade srbije koja priprema nacrt rezolucije o kosovu koji bi sutra trebalo da se nađe pred novim sazivom republičkog parlamenta no o tom potom o sjednici vlade i o rezoluciji nešto kasnije tokom sjednica vlade bude završen ili sutra ujutru sada o jednoj drugoj temi koja također tema dana za bivšim komandantom posebnih jedinica policije i žandarmerije goranom radosavljevićem gurijem raspisana je prema agencijskim vestima policijska potraga na nivou srbije jer se radosavljević nije pojavio na sudu gdje je pozvan u svojstvu svjedoka na suđenju optuženima za pomaganje ubistvu američkih državljana albak'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_rate"
+    "speech_segment = speech[0:1*60*sample_rate]\n",
+    "\n",
+    "\n",
+    "inputs = processor(speech_segment, sampling_rate=sample_rate, return_tensors=\"pt\")\n",
+    "with torch.no_grad():\n",
+    "    logits = model(**inputs).logits\n",
+    "transcription = processor.batch_decode(logits.numpy()).text[0]\n",
+    "transcription"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Implementing a complete transcribing process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "overlap_seconds = 1\n",
+    "import numpy as np\n",
+    "\n",
+    "indices = np.arange(0, speech.shape[0], 10 * 60 * sample_rate, dtype=int).tolist() + [-1]\n",
+    "\n",
+    "transcripts = list()\n",
+    "for start, stop in zip(indices[0:-2], indices[1:]):\n",
+    "    # If overlap would go over the end, correct it\n",
+    "    if stop + overlap_seconds * sample_rate >= speech.shape[0]:\n",
+    "        stop = -1\n",
+    "    speech_segment = speech[start:stop]\n",
+    "    inputs = processor(speech_segment, sampling_rate=sample_rate, return_tensors=\"pt\")\n",
+    "    with torch.no_grad():\n",
+    "        logits = model(**inputs).logits\n",
+    "    transcription = processor.batch_decode(logits.numpy()).text[0]\n",
+    "    transcripts.append(transcription)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving the results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"001_transcripts.txt\", \"w\") as f:\n",
+    "    f.write(\" \".join(transcripts))"
    ]
   },
   {
