FInally found a fix for lm models

--- a/001_first_attempt.ipynb
+++ b/001_first_attempt.ipynb
@@ -160,6 +160,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To other models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ukoliko ste gledali vesti televizije b992. koje su upravo završene svakako vam je pretpostavljen poznato da je u ovim trenucima u toku sjednica vlade srbije koja priprema']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import Wav2Vec2ProcessorWithLM, Wav2Vec2ForCTC, Wav2Vec2Processor\n",
+    "import soundfile as sf\n",
+    "import torch\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "# load model and tokenizer\n",
+    "processor = Wav2Vec2Processor.from_pretrained(\n",
+    "    \"classla/wav2vec2-xls-r-parlaspeech-hr-lm\", pad_token=\"[PAD]\")\n",
+    "model = Wav2Vec2ForCTC.from_pretrained(\"classla/wav2vec2-xls-r-parlaspeech-hr-lm\")\n",
+    "\n",
+    "# read the wav file \n",
+    "speech, sample_rate = sf.read(\"audio.wav\")\n",
+    "\n",
+    "# Limit the input to first N seconds:\n",
+    "speech_segment = speech[0:20*sample_rate]\n",
+    "\n",
+    "inputs = processor(speech_segment, sampling_rate=sample_rate, return_tensors=\"pt\")\n",
+    "with torch.no_grad():\n",
+    "    logits = model(**inputs).logits\n",
+    "prediction_ids = torch.argmax(logits, dim=-1)\n",
+    "transcription = processor.batch_decode(prediction_ids)\n",
+    "transcription"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = processor(speech_segment, sampling_rate=sample_rate, return_tensors=\"pt\")\n",
+    "with torch.no_grad():\n",
+    "    logits = model(**inputs).logits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['[PAD]u[PAD]ko[PAD]l[PAD]i[PAD]ko[PAD] [PAD]ste gl[PAD]e[PAD]d[PAD]a[PAD]l[PAD]i [PAD]v[PAD]e[PAD]s[PAD]t[PAD]i[PAD] [PAD]tel[PAD]e[PAD]vi[PAD]zi[PAD]je [PAD]b[PAD]9[PAD]9[PAD]2.[PAD] koje s[PAD]u [PAD]u[PAD]p[PAD]r[PAD]av[PAD]o[PAD] [PAD]z[PAD]a[PAD]v[PAD]r[PAD]š[PAD]e[PAD]n[PAD]e[PAD] [PAD]s[PAD]va[PAD]k[PAD]a[PAD]k[PAD]o va[PAD]m je[PAD] [PAD]pret[PAD]p[PAD]o[PAD]stavljen p[PAD]o[PAD]z[PAD]n[PAD]a[PAD]t[PAD]o[PAD] d[PAD]a je u ov[PAD]i[PAD]m tre[PAD]nu[PAD]c[PAD]i[PAD]m[PAD]a[PAD] u [PAD]t[PAD]o[PAD]k[PAD]u[PAD] [PAD]s[PAD]j[PAD]e[PAD]dn[PAD]i[PAD]c[PAD]a[PAD] [PAD]v[PAD]l[PAD]a[PAD]d[PAD]e[PAD] [PAD]s[PAD]r[PAD]b[PAD]i[PAD]je [PAD]k[PAD]oja[PAD] [PAD]pri[PAD]pre[PAD]m[PAD]a[PAD]']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction_ids = torch.argmax(logits, dim=-1)\n",
+    "transcription = processor.batch_decode(prediction_ids)\n",
+    "transcription"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
