--- a/002_generalizing_to_all_models.ipynb
+++ b/002_generalizing_to_all_models.ipynb
@@ -2,13 +2,154 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Only 0 unigrams passed as vocabulary. Is this small or artificial data?\n",
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf21c429086446d3bb7f8aec738d0821",
+       "model_id": "8454c7b6b5c64dcc845e0714a5104f31",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/214 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b32ecd9b21ed4339ab98251b56b154ec",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/2.27k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e7d28d2b12d14b33aa295793eab8dc73",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/463 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df6e237d5c924dad84cead1531d40a54",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.18G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c6ed661c6f04f6a9dc6c24a2645bb74",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/262 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b260f276a9d04a78989885d97bb208ad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/438 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6bbf3da6329441fab46db3c2ee6a0a77",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/348 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "163620363b92453689acfffa3fc72bfc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/36.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2898e9b035847af86ccaa48feab5dc4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/407 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "374a5fd14cad4b47975489ba9a9d2d50",
        "version_major": 2,
        "version_minor": 0
       },
@@ -22,7 +163,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa64fba47b6844568d9f4613efadd142",
+       "model_id": "c65fb32e69b548889680426ad5d1981a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -36,7 +177,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26d22b366a7e49dba0aca6d187b61a73",
+       "model_id": "2ee55b0c7829429684e52cc8c562b9bd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -50,7 +191,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "464ed4369bda43c98dc1af9707ea5b92",
+       "model_id": "9bd47011989c41caa23f9ea494e02181",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,6 +208,34 @@
      "text": [
       "Only 0 unigrams passed as vocabulary. Is this small or artificial data?\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9c8d74d434d44cbd903417d561d9c8be",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/2.25k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "383e04a04a71463a90154d7347ff282d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/1.18G [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -117,7 +286,7 @@
     "            transcription = processor.batch_decode(logits.numpy()).text[0]\n",
     "        except:\n",
     "            prediction_ids = torch.argmax(logits, dim=-1)\n",
-    "            transcription = processor.batch_decode(prediction_ids)\n",
+    "            transcription = processor.batch_decode(prediction_ids)[0]\n",
     "\n",
     "        transcripts.append(transcription)\n",
     "    results.append({\"model\": model, \"transcription\": \" \".join(transcripts)})\n",
@@ -129,22 +298,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 29999, 50)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "logits.numpy().shape"
+    "results_corrected = []\n",
+    "for model_true_name, entry in zip(models, results):\n",
+    "    current = entry\n",
+    "    current[\"model\"] = model_true_name\n",
+    "    results_corrected.append(current)\n",
+    "\n",
+    "\n",
+    "pd.DataFrame(data=results_corrected).to_csv(\"003_all_models_transcriptions.csv\", index=False)"
    ]
   },
   {
