--- a/003_evaluating_all_models.ipynb
+++ b/003_evaluating_all_models.ipynb
@@ -6,19 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import difflib\n",
-    "from difflib import Differ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "\n",
+    "import string\n",
     "raw = Path(\"transcript_raw.txt\").read_text()"
    ]
   },
@@ -31,16 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,20 +100,19 @@
        "3  ukoliko ste 92 koji su upravo svakako vam je d...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "df = pd.read_csv(\"003_all_models_transcriptions.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,38 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0d0871d9e5b490294db276d1d8bb116",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading builder script:   0%|          | 0.00/1.90k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "256e02a1561f472785bf2c37613b0d07",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading builder script:   0%|          | 0.00/2.16k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i, row in df.iterrows():\n",
     "    modelname = row[\"model\"]\n",
@@ -202,7 +153,7 @@
     "    content = generate_differ_content(pred=pred)\n",
     "    fname = f\"\"\"003_{modelname.replace(\"/\", \"--\")}.txt\"\"\"\n",
     "    p = Path(\"./diffs\") / fname\n",
-    "    header = f\"\"\"Model: {modelname}, cer: {c}, wer: {w}\\n\\n\\n\"\"\"\n",
+    "    header = f\"\"\"Model: {modelname},\\ncer: {c}, \\nwer: {w}\\n\\n\\n\"\"\"\n",
     "    p.write_text(header + content)\n"
    ]
   },
