Construct metrics overview and drop it in README

--- a/003_evaluating_all_models.ipynb
+++ b/003_evaluating_all_models.ipynb
@@ -135,10 +135,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "wers = []\n",
+    "cers = []\n",
     "for i, row in df.iterrows():\n",
     "    modelname = row[\"model\"]\n",
     "    pred = row[\"transcription\"].replace(\"<pad>\", \"\")\n",
@@ -149,12 +151,37 @@
     "\n",
     "    c = cer.compute(predictions = [pred], references = [raw])\n",
     "    w = wer.compute(predictions = [pred], references = [raw])\n",
-    "\n",
+    "    cers.append(c)\n",
+    "    wers.append(w)\n",
     "    content = generate_differ_content(pred=pred)\n",
     "    fname = f\"\"\"003_{modelname.replace(\"/\", \"--\")}.txt\"\"\"\n",
     "    p = Path(\"./diffs\") / fname\n",
     "    header = f\"\"\"Model: {modelname},\\ncer: {c}, \\nwer: {w}\\n\\n\\n\"\"\"\n",
     "    p.write_text(header + content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "| model                                           |      wer |      cer |\n",
+      "|:------------------------------------------------|---------:|---------:|\n",
+      "| classla/wav2vec2-xls-r-parlaspeech-hr-lm        | 0.661052 | 0.488822 |\n",
+      "| classla/wav2vec2-xls-r-parlaspeech-hr           | 0.692956 | 0.459903 |\n",
+      "| classla/wav2vec2-large-slavic-parlaspeech-hr    | 0.801429 | 0.573916 |\n",
+      "| classla/wav2vec2-large-slavic-parlaspeech-hr-lm | 0.75804  | 0.616048 |\n"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"cer\"] = cers\n",
+    "df[\"wer\"] = wers\n",
+    "print(df[\"model wer cer\".split()].to_markdown(index=False))"
    ]
   },
   {
