Bugfixing the crawler...

--- a/006_crawler_preparations.ipynb
+++ b/006_crawler_preparations.ipynb
@@ -84,21 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "found_urls = []\n",
-    "pagenumber = 2\n",
-    "for i in range(1, 29):\n",
-    "    url = f\"https://www.juznevesti.com/Tagovi/Intervju-15-minuta.{pagenumber}.sr.html\"\n",
+    "for pagenumber in range(1, 16):\n",
+    "    \n",
+    "    url = f\"https://www.juznevesti.com/15-minuta/index.{pagenumber}.sr.html\"\n",
     "    req = requests.get(url)\n",
     "    soup = BeautifulSoup(req.text, \"html.parser\")\n",
     "    divs = soup.find_all(\"div\")\n",
     "    for div in divs:\n",
-    "        current_class = div.get(\"class\", [])\n",
-    "        if \"t15min-list__item\" in current_class or \"t15min-list__featured\" in current_class:\n",
-    "            found_urls.append([i  for i in div.find_all(\"a\") if i.get(\"class\", []) ==[\"db\"]][0].get(\"href\"))\n"
+    "        found_urls.extend([i.get(\"href\") for i in div.find_all(\"a\")])\n",
+    "found_urls = list(set(found_urls))\n"
    ]
   },
   {
@@ -110,9 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_19411/910759867.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0miframes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"iframe\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mvideo_link\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"src\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miframes\u001b[0m  \u001b[0;32mif\u001b[0m \u001b[0;34m\"youtube.com\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"src\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0myt_hash\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvideo_link\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mtranscripts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "transcripts = list()\n",
     "hashes = list()\n",
@@ -125,13 +136,16 @@
     "        current_classes_set = set(i.get(\"class\", list()))\n",
     "        if \"desc_holder\" in current_classes_set:\n",
     "            current_text = \"    \".join([j.text + \"\\n\" for j in i.find_all(\"p\")])\n",
-    "    video_div = soup.find(id=\"video_1\")\n",
-    "    for element in video_div.contents:\n",
-    "        try:\n",
-    "            video_link = element.get(\"src\", np.nan)\n",
-    "            break\n",
-    "        except KeyError:\n",
-    "            continue\n",
+    "    # video_div = soup.find(id=\"video_1\")\n",
+    "    # for element in video_div.contents:\n",
+    "    #     try:\n",
+    "    #         video_link = element.get(\"src\", np.nan)\n",
+    "    #         break\n",
+    "    #     except:\n",
+    "    #         continue\n",
+    "    iframes = soup.find_all(\"iframe\")\n",
+    "\n",
+    "    video_link = [i.get(\"src\") for i in iframes  if \"youtube.com\" in i.get(\"src\")][0]\n",
     "    yt_hash = video_link.split(\"/\")[-1]\n",
     "    transcripts.append(current_text)\n",
     "    hashes.append(yt_hash)"
@@ -139,16 +153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[560, 560, 560]"
+       "[0, 0, 404]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,142 +173,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>url</th>\n",
-       "      <th>yt_hash</th>\n",
-       "      <th>transcript</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>https://www.juznevesti.com/Kultura/Price-na-di...</td>\n",
-       "      <td>PFSd3XZTvgA</td>\n",
-       "      <td>Zbirkom priča Blag reč književnica i novinarka...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://www.juznevesti.com/Drushtvo/143-godine...</td>\n",
-       "      <td>KfKWnocf7Ec</td>\n",
-       "      <td>Mnogi sadašnji đaci nastaviće stopama nekada s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://www.juznevesti.com/Sport/Piksi-Juzna-p...</td>\n",
-       "      <td>FxvpyOsw9eU</td>\n",
-       "      <td>Morate da budete pobednik i da se ne predajete...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://www.juznevesti.com/Kultura/Srdjan-Drag...</td>\n",
-       "      <td>x2eOJEf8vUA</td>\n",
-       "      <td>Film Nebesa, čija je premijera održana i u Niš...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://www.juznevesti.com/Politika/Zelenovic-...</td>\n",
-       "      <td>SQg4s0P64j8</td>\n",
-       "      <td>Zeleno i levo je politika platforme koju okupl...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>555</th>\n",
-       "      <td>https://www.juznevesti.com/Drushtvo/Doktor-Dej...</td>\n",
-       "      <td>YtiVyNOM05k</td>\n",
-       "      <td>Broj zaraženih raste, vakcinacija protiv koron...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>556</th>\n",
-       "      <td>https://www.juznevesti.com/Drushtvo/Jova-Radov...</td>\n",
-       "      <td>s5CMMcA1Mqc</td>\n",
-       "      <td>Šta nedostaje na današnjoj televiziji, zašto n...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>557</th>\n",
-       "      <td>https://www.juznevesti.com/Drushtvo/Smrtnost-u...</td>\n",
-       "      <td>MwzywjsTT0o</td>\n",
-       "      <td>Upoređujući otvorene podatke istraživači Pravo...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>558</th>\n",
-       "      <td>https://www.juznevesti.com/Drushtvo/Price-o-lo...</td>\n",
-       "      <td>_9zD8JdezlE</td>\n",
-       "      <td>Koncentracioni logor koji se tokom Drugog svet...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>559</th>\n",
-       "      <td>https://www.juznevesti.com/Drushtvo/Profesorka...</td>\n",
-       "      <td>RP4HDmVYmis</td>\n",
-       "      <td>Da vremenske neprilike poput grada i udara gro...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>560 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                   url      yt_hash  \\\n",
-       "0    https://www.juznevesti.com/Kultura/Price-na-di...  PFSd3XZTvgA   \n",
-       "1    https://www.juznevesti.com/Drushtvo/143-godine...  KfKWnocf7Ec   \n",
-       "2    https://www.juznevesti.com/Sport/Piksi-Juzna-p...  FxvpyOsw9eU   \n",
-       "3    https://www.juznevesti.com/Kultura/Srdjan-Drag...  x2eOJEf8vUA   \n",
-       "4    https://www.juznevesti.com/Politika/Zelenovic-...  SQg4s0P64j8   \n",
-       "..                                                 ...          ...   \n",
-       "555  https://www.juznevesti.com/Drushtvo/Doktor-Dej...  YtiVyNOM05k   \n",
-       "556  https://www.juznevesti.com/Drushtvo/Jova-Radov...  s5CMMcA1Mqc   \n",
-       "557  https://www.juznevesti.com/Drushtvo/Smrtnost-u...  MwzywjsTT0o   \n",
-       "558  https://www.juznevesti.com/Drushtvo/Price-o-lo...  _9zD8JdezlE   \n",
-       "559  https://www.juznevesti.com/Drushtvo/Profesorka...  RP4HDmVYmis   \n",
-       "\n",
-       "                                            transcript  \n",
-       "0    Zbirkom priča Blag reč književnica i novinarka...  \n",
-       "1    Mnogi sadašnji đaci nastaviće stopama nekada s...  \n",
-       "2    Morate da budete pobednik i da se ne predajete...  \n",
-       "3    Film Nebesa, čija je premijera održana i u Niš...  \n",
-       "4    Zeleno i levo je politika platforme koju okupl...  \n",
-       "..                                                 ...  \n",
-       "555  Broj zaraženih raste, vakcinacija protiv koron...  \n",
-       "556  Šta nedostaje na današnjoj televiziji, zašto n...  \n",
-       "557  Upoređujući otvorene podatke istraživači Pravo...  \n",
-       "558  Koncentracioni logor koji se tokom Drugog svet...  \n",
-       "559  Da vremenske neprilike poput grada i udara gro...  \n",
-       "\n",
-       "[560 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import pandas as pd\n",
@@ -310,30 +191,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "url           0\n",
-       "yt_hash       0\n",
-       "transcript    0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.isna().sum(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,10 +217,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "7f6f5766036ee03d059e365a942add07f79c17033585e9357ee8157d52fe6bb9"
+   "hash": "0a2ef650857c097cc4b789456eae376654e6121eead7baaf4f6a1af0eeae8bb5"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('base')",
+   "display_name": "Python 3.8.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -367,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
