--- a/006_crawler_preparations.ipynb
+++ b/006_crawler_preparations.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "'Sk4JedgwClY'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        " '\\n']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,10 +94,32 @@
     "    url = f\"https://www.juznevesti.com/15-minuta/index.{pagenumber}.sr.html\"\n",
     "    req = requests.get(url)\n",
     "    soup = BeautifulSoup(req.text, \"html.parser\")\n",
-    "    divs = soup.find_all(\"div\")\n",
-    "    for div in divs:\n",
-    "        found_urls.extend([i.get(\"href\") for i in div.find_all(\"a\")])\n",
-    "found_urls = list(set(found_urls))\n"
+    "    h3s = soup.find_all(\"h3\")\n",
+    "    h3s_filtered = [i for i in h3s if \"title--2\" in i.get(\"class\")]\n",
+    "    found_urls.extend(\n",
+    "        [i.a[\"href\"] for i in h3s_filtered]\n",
+    "    )\n",
+    "found_urls = list(set(found_urls))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(found_urls)"
    ]
   },
   {
@@ -109,21 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_19411/910759867.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0miframes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msoup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"iframe\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0mvideo_link\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"src\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0miframes\u001b[0m  \u001b[0;32mif\u001b[0m \u001b[0;34m\"youtube.com\"\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"src\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0myt_hash\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvideo_link\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mtranscripts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcurrent_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "transcripts = list()\n",
     "hashes = list()\n",
@@ -153,16 +163,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 0, 404]"
+       "[300, 300, 300]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,9 +183,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "      <th>yt_hash</th>\n",
+       "      <th>transcript</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>https://www.juznevesti.com/15-minuta/Boban-Sto...</td>\n",
+       "      <td>00DtyZ2sCUM</td>\n",
+       "      <td>Gost: Boban Stojanović, redovni profesor Ekono...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>https://www.juznevesti.com/15-minuta/Slavoljub...</td>\n",
+       "      <td>58xZSVbpgkk</td>\n",
+       "      <td>Gost: Slavoljub Vlajković, narodni poslanik SP...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>https://www.juznevesti.com/15-minuta/Zoran-Ziv...</td>\n",
+       "      <td>YKAqDCyINz4</td>\n",
+       "      <td>Gost: Zoran Žuvković, predsednik Nove stranke\\...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>https://www.juznevesti.com/15-minuta/Majkl-Dev...</td>\n",
+       "      <td>2QShGnPuVjQ</td>\n",
+       "      <td>Gost: Majkl Devenport, Šef Delegacije EU u Srb...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>https://www.juznevesti.com/15-minuta/Jelena-Dj...</td>\n",
+       "      <td>khEIELaXKwI</td>\n",
+       "      <td>Gost: Jelena Đorđević, Odbornica u Skupštini g...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>295</th>\n",
+       "      <td>https://www.juznevesti.com/15-minuta/Dragan-Pe...</td>\n",
+       "      <td>a1cN7-Y29_g</td>\n",
+       "      <td>Gost: Dragan Petković, savetnik za evropske in...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>296</th>\n",
+       "      <td>https://www.juznevesti.com/15-minuta/Vladica-D...</td>\n",
+       "      <td>6CTWDc4amzU</td>\n",
+       "      <td>Gost: Vladica Dimitrov, narodni poslanik SNS i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>297</th>\n",
+       "      <td>https://www.juznevesti.com/15-minuta/Spasoje-M...</td>\n",
+       "      <td>IUIKV9XlWEM</td>\n",
+       "      <td>Gost: Spasoje Milovanović, direktor Narodnog p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>298</th>\n",
+       "      <td>https://www.juznevesti.com/15-minuta/Vukosava-...</td>\n",
+       "      <td>2-F5yoHSn5k</td>\n",
+       "      <td>Gosti: Vukosava Crnjanski i Jovana Đurbabić\\n ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>https://www.juznevesti.com/15-minuta/Rodoljub-...</td>\n",
+       "      <td>fTfyE4ZdZqY</td>\n",
+       "      <td>Gost: Rodoljub Šabić, Poverenik za informacije...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   url      yt_hash  \\\n",
+       "0    https://www.juznevesti.com/15-minuta/Boban-Sto...  00DtyZ2sCUM   \n",
+       "1    https://www.juznevesti.com/15-minuta/Slavoljub...  58xZSVbpgkk   \n",
+       "2    https://www.juznevesti.com/15-minuta/Zoran-Ziv...  YKAqDCyINz4   \n",
+       "3    https://www.juznevesti.com/15-minuta/Majkl-Dev...  2QShGnPuVjQ   \n",
+       "4    https://www.juznevesti.com/15-minuta/Jelena-Dj...  khEIELaXKwI   \n",
+       "..                                                 ...          ...   \n",
+       "295  https://www.juznevesti.com/15-minuta/Dragan-Pe...  a1cN7-Y29_g   \n",
+       "296  https://www.juznevesti.com/15-minuta/Vladica-D...  6CTWDc4amzU   \n",
+       "297  https://www.juznevesti.com/15-minuta/Spasoje-M...  IUIKV9XlWEM   \n",
+       "298  https://www.juznevesti.com/15-minuta/Vukosava-...  2-F5yoHSn5k   \n",
+       "299  https://www.juznevesti.com/15-minuta/Rodoljub-...  fTfyE4ZdZqY   \n",
+       "\n",
+       "                                            transcript  \n",
+       "0    Gost: Boban Stojanović, redovni profesor Ekono...  \n",
+       "1    Gost: Slavoljub Vlajković, narodni poslanik SP...  \n",
+       "2    Gost: Zoran Žuvković, predsednik Nove stranke\\...  \n",
+       "3    Gost: Majkl Devenport, Šef Delegacije EU u Srb...  \n",
+       "4    Gost: Jelena Đorđević, Odbornica u Skupštini g...  \n",
+       "..                                                 ...  \n",
+       "295  Gost: Dragan Petković, savetnik za evropske in...  \n",
+       "296  Gost: Vladica Dimitrov, narodni poslanik SNS i...  \n",
+       "297  Gost: Spasoje Milovanović, direktor Narodnog p...  \n",
+       "298  Gosti: Vukosava Crnjanski i Jovana Đurbabić\\n ...  \n",
+       "299  Gost: Rodoljub Šabić, Poverenik za informacije...  \n",
+       "\n",
+       "[300 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "import pandas as pd\n",
@@ -191,16 +334,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "url           0\n",
+       "yt_hash       0\n",
+       "transcript    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.isna().sum(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,10 +374,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0a2ef650857c097cc4b789456eae376654e6121eead7baaf4f6a1af0eeae8bb5"
+   "hash": "7f6f5766036ee03d059e365a942add07f79c17033585e9357ee8157d52fe6bb9"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('base')",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
