--- a/007_checking_downloaded_videos.ipynb
+++ b/007_checking_downloaded_videos.ipynb
@@ -43,6 +43,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "169    https://www.juznevesti.com/15-minuta/Miroljub-Stojcic.sr.html\n",
+       "Name: url, dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.options.display.max_colwidth = 200\n",
+    "df[~df.exists].url"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -121,99 +143,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>url</th>\n",
-       "      <th>yt_hash</th>\n",
-       "      <th>transcript</th>\n",
-       "      <th>exists</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>https://www.juznevesti.com/15-minuta/Boban-Sto...</td>\n",
-       "      <td>00DtyZ2sCUM</td>\n",
-       "      <td>Gost: Boban Stojanović, redovni profesor Ekono...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://www.juznevesti.com/15-minuta/Slavoljub...</td>\n",
-       "      <td>58xZSVbpgkk</td>\n",
-       "      <td>Gost: Slavoljub Vlajković, narodni poslanik SP...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://www.juznevesti.com/15-minuta/Zoran-Ziv...</td>\n",
-       "      <td>YKAqDCyINz4</td>\n",
-       "      <td>Gost: Zoran Žuvković, predsednik Nove stranke\\...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>https://www.juznevesti.com/15-minuta/Majkl-Dev...</td>\n",
-       "      <td>2QShGnPuVjQ</td>\n",
-       "      <td>Gost: Majkl Devenport, Šef Delegacije EU u Srb...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>https://www.juznevesti.com/15-minuta/Jelena-Dj...</td>\n",
-       "      <td>khEIELaXKwI</td>\n",
-       "      <td>Gost: Jelena Đorđević, Odbornica u Skupštini g...</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 url      yt_hash  \\\n",
-       "0  https://www.juznevesti.com/15-minuta/Boban-Sto...  00DtyZ2sCUM   \n",
-       "1  https://www.juznevesti.com/15-minuta/Slavoljub...  58xZSVbpgkk   \n",
-       "2  https://www.juznevesti.com/15-minuta/Zoran-Ziv...  YKAqDCyINz4   \n",
-       "3  https://www.juznevesti.com/15-minuta/Majkl-Dev...  2QShGnPuVjQ   \n",
-       "4  https://www.juznevesti.com/15-minuta/Jelena-Dj...  khEIELaXKwI   \n",
-       "\n",
-       "                                          transcript  exists  \n",
-       "0  Gost: Boban Stojanović, redovni profesor Ekono...    True  \n",
-       "1  Gost: Slavoljub Vlajković, narodni poslanik SP...    True  \n",
-       "2  Gost: Zoran Žuvković, predsednik Nove stranke\\...    True  \n",
-       "3  Gost: Majkl Devenport, Šef Delegacije EU u Srb...    True  \n",
-       "4  Gost: Jelena Đorđević, Odbornica u Skupštini g...    True  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.head()"
+    "from tqdm.auto import tqdm\n",
+    "import os\n",
+    "import tempfile\n",
+    "from pathlib import Path\n",
+    "\n",
+    "audiodir = Path(\"audio\")\n",
+    "\n",
+    "df[\"path\"] = [audiodir / (i+\".wav\") for i in df.yt_hash]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[df.exists].to_csv(\"006_crawling_juznevesti.csv\", index=False)"
    ]
   },
   {
@@ -226,10 +176,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "0a2ef650857c097cc4b789456eae376654e6121eead7baaf4f6a1af0eeae8bb5"
+   "hash": "7f6f5766036ee03d059e365a942add07f79c17033585e9357ee8157d52fe6bb9"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('base')",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -243,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
