Evaluated and logged.

--- a/010_evaluating_some_models.ipynb
+++ b/010_evaluating_some_models.ipynb
@@ -8,32 +8,12 @@
    "source": [
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "import string\n",
-    "raw = Path(\"transcript_raw.txt\").read_text()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "preprocess raw: delete newlines and reporters' names, delete excess whitespace and all punctuation:"
+    "import string\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw = raw.replace(\"\\nVekarić:\", \" \").replace(\"\\nB92:\", \" \").replace(\"\\n\", \" \").lower()\n",
-    "for l in string.punctuation:\n",
-    "    raw = raw.replace(l, \"\")\n",
-    "raw = \" \".join(raw.split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,22 +45,22 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>classla/wav2vec2-xls-r-parlaspeech-hr-lm</td>\n",
-       "      <td>ukoliko ste i teevziejsupravo završene svakako...</td>\n",
+       "      <td>prije zapinfacijma ćearavaaženv hvala predsjed...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>classla/wav2vec2-xls-r-parlaspeech-hr</td>\n",
-       "      <td>ukoliko ste  ti televzije bkoji su upravo zavr...</td>\n",
+       "      <td>oe prig zaopinforacijma  zk paajaćeapravae zap...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>classla/wav2vec2-large-slavic-parlaspeech-hr</td>\n",
-       "      <td>&lt;pad&gt;u&lt;pad&gt;kol&lt;pad&gt;i&lt;pad&gt;ko s&lt;pad&gt;te&lt;pad&gt; &lt;pad...</td>\n",
+       "      <td>švavatenu tražim  u ime kluba stranke seta st...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>classla/wav2vec2-large-slavic-parlaspeech-hr-lm</td>\n",
-       "      <td>ukoliko ste 92 koji su upravo svakako vam je d...</td>\n",
+       "      <td>švvatenutražm u ime kluba stranke set tanka gl...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -94,25 +74,25 @@
        "3  classla/wav2vec2-large-slavic-parlaspeech-hr-lm   \n",
        "\n",
        "                                       transcription  \n",
-       "0  ukoliko ste i teevziejsupravo završene svakako...  \n",
-       "1  ukoliko ste  ti televzije bkoji su upravo zavr...  \n",
-       "2  <pad>u<pad>kol<pad>i<pad>ko s<pad>te<pad> <pad...  \n",
-       "3  ukoliko ste 92 koji su upravo svakako vam je d...  "
+       "0  prije zapinfacijma ćearavaaženv hvala predsjed...  \n",
+       "1  oe prig zaopinforacijma  zk paajaćeapravae zap...  \n",
+       "2   švavatenu tražim  u ime kluba stranke seta st...  \n",
+       "3  švvatenutražm u ime kluba stranke set tanka gl...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"003_all_models_transcriptions.csv\")\n",
+    "df = pd.read_csv(\"010_some_models_transcriptions.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,6 +123,7 @@
     "cers = []\n",
     "for i, row in df.iterrows():\n",
     "    modelname = row[\"model\"]\n",
+    "    raw = df.iloc[1,1]\n",
     "    pred = row[\"transcription\"].replace(\"<pad>\", \"\")\n",
     "    from datasets import load_metric\n",
     "\n",
@@ -154,27 +135,24 @@
     "    cers.append(c)\n",
     "    wers.append(w)\n",
     "    content = generate_differ_content(pred=pred)\n",
-    "    fname = f\"\"\"003_{modelname.replace(\"/\", \"--\")}.txt\"\"\"\n",
-    "    p = Path(\"./diffs\") / fname\n",
-    "    header = f\"\"\"Model: {modelname},\\ncer: {c}, \\nwer: {w}\\n\\n\\n\"\"\"\n",
-    "    p.write_text(header + content)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| model                                           |      wer |      cer |\n",
-      "|:------------------------------------------------|---------:|---------:|\n",
-      "| classla/wav2vec2-xls-r-parlaspeech-hr-lm        | 0.661052 | 0.488822 |\n",
-      "| classla/wav2vec2-xls-r-parlaspeech-hr           | 0.692956 | 0.459903 |\n",
-      "| classla/wav2vec2-large-slavic-parlaspeech-hr    | 0.801429 | 0.573916 |\n",
-      "| classla/wav2vec2-large-slavic-parlaspeech-hr-lm | 0.75804  | 0.616048 |\n"
+      "| model                                           |      wer |       cer |\n",
+      "|:------------------------------------------------|---------:|----------:|\n",
+      "| classla/wav2vec2-xls-r-parlaspeech-hr-lm        | 0.144981 | 0.0387541 |\n",
+      "| classla/wav2vec2-xls-r-parlaspeech-hr           | 0        | 0         |\n",
+      "| classla/wav2vec2-large-slavic-parlaspeech-hr    | 0.329926 | 0.117841  |\n",
+      "| classla/wav2vec2-large-slavic-parlaspeech-hr-lm | 0.282528 | 0.119994  |\n"
      ]
     }
    ],
