--- a/009_transcribing.ipynb
+++ b/009_transcribing.ipynb
@@ -2439,7 +2439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2526,7 +2526,7 @@
     "\n",
     "    speech, sample_rate = sf.read(filename)\n",
     "    indices = np.arange(\n",
-    "        0, speech.shape[0], int(lim_minutes * 60 * sample_rate), dtype=int\n",
+    "        0, speech.shape[0], lim_minutes * 60 * sample_rate, dtype=int\n",
     "    )\n",
     "    transcription = \"\"\n",
     "    word_starts = []\n",
@@ -2541,6 +2541,8 @@
     "        transcription += \" \" + \" \".join(words)\n",
     "        word_starts += [i + start / sample_rate for i in starts]\n",
     "        word_ends += [i + start / sample_rate for i in ends]\n",
+    "\n",
+    "    # Final round: transcribe the last segment that was not transcribed before:\n",
     "    start, stop = indices[-1], speech.shape[0]\n",
     "    speech_segment = speech[start:]\n",
     "    words, starts, ends = get_words_and_times(\n",
@@ -2549,8 +2551,9 @@
     "    transcription += \" \" + \" \".join(words)\n",
     "    word_starts += [i + start / sample_rate for i in starts]\n",
     "    word_ends += [i + start / sample_rate for i in ends]\n",
-    "\n",
     "    transcription = transcription.replace(\"[pad]\", \"\")\n",
+    "\n",
+    "\n",
     "    return transcription, word_starts, word_ends\n",
     "\n",
     "\n",
@@ -2563,7 +2566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -4816,7 +4819,7 @@
        "(2252, 2252, 2238)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
